--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -29,11 +29,11 @@
     </div>
 
     <div class="sidebar">
-      <div class="function1">1</div>
-      <div class="function2">2</div>
-      <div class="function3">3</div>
-      <div class="function4">4</div>
-      <div class="function5">5</div>
+      <div class="function1" onclick="connectDatabase()"></div>
+      <div class="function2"></div>
+      <div class="function3"></div>
+      <div class="function4"></div>
+      <div class="function5"></div>
     </div>
 
     <div class="graphs">
@@ -46,6 +46,7 @@
     <div class="footer">Footer</div>
 
   </div>
-  <script src="js/scripts.js"></script>
+  <script src="dataBase/connectSQL.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
